# basic-geo-spatial-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/ch01/: nb-geospatial-vector-data.ipynb
notebooks/ch02/: nb-spatial-relationships.ipynb
notebooks/ch03/: nb-projecting-transforming-geometries.ipynb
notebooks/ch04/: nb-putting-all-together.ipynb
notebooks/cho3/: nb-projecting-transforming-geometries.ipynb
notebooks/project01/: nb01-combining-polygon-and-sctter-plot.ipynb  nb02-creating-and-joining-geodataframes.ipynb  nb03-geoseries-and-folium.ipynb
notebooks/project02/: nb-uber-geo-spatial-analytic.ipynb
notebooks/project03/: nb-flood-risk-analysis.ipynb
